<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_watcher"
            android:icon="@drawable/notification_24"
            android:title="@string/menu_watcher" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/calendar_24"
            android:title="@string/bookings" />
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/open_external"
            android:title="@string/open_website" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>